[package]
name = "mf-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.5.1"
confy = { version = "0.6.0", features = ["yaml_conf"], default-features = false }
dialoguer = "0.11.0"
open = "5.0.1"
reqwest = { version = "0.11.24", features = ["blocking", "json"] }
serde = "1.0.197"
serde_derive = "1.0.197"
serde_json = "1.0.114"
urlencoding = "2.1.3"
